# frame-launch-app

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  Dockerfile  README.md  about.html  ad-config.js  ads.js  ads.txt  app.js  consent.js  contact.html  cookies.html  editor.html  growth-config.js  growth.js  history-manager.js  index.html  landing.css  landing.html  landing.js  language-utils.js  lucide-icons.js  magical-titles.js  nginx.conf  package-lock.json  package.json  privacy.html  robots.txt  sitemap.xml  styles.css  templates.html  terms.html  three-renderer.js
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  tauri-build.yml
alternatives/: app-launchpad-alternative.html  appscreens-alternative.html  appure-alternative.html  canva-vs-framelaunch.html  figma-templates-vs-framelaunch.html  index.html  storeshots-alternative.html
docs/superpowers/plans/: 2026-04-24-frame-launch-app-copy.md  2026-04-24-framelaunch-launch-console-css-refresh.md  (+2 more)
guides/: app-store-screenshot-generator.html  app-store-screenshot-sizes.html  frame-launch-workflow.html  free-app-screenshot-maker-no-watermark.html  google-play-graphics.html  index.html  marketing-screenshot-design.html  product-hunt-launch-image-checklist.html  screenshot-localization.html
img/: icon.icns
models/: samsung-galaxy-s25-ultra.glb
scripts/: copy-frontend.js  verify-landing.js  verify-production.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: history-manager.test.js
(+14 files in other folders)
